--- a/networking.html
+++ b/networking.html
@@ -150,11 +150,10 @@
 </section>
 
  <!-- ======= Hero Section ======= -->
- <section id="hero" class="d-flex justify-content-center align-items-center">
+ <section id="hero-networking" class="d-flex justify-content-center align-items-center">
   <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
-    <h1>Empodere-se:<br>Transfome sonhos<br>em realidade</h1>
+    <!-- <h1>Empodere-se:<br>Transfome sonhos<br>em realidade</h1> -->
     <!-- <h2>We are team of talented designers making websites with Bootstrap</h2> -->
-    <a href="sobrenos.html" class="btn-get-started">Leia mais</a>
   </div>
 </section><!-- End Hero -->
 
@@ -171,7 +170,7 @@
         <div class="row">
 
           <div class="col-md-6 d-flex align-items-stretch">
-            <div class="card" style='background-image: url("./assets/imagens/indigenas.png");'>
+            <div class="card" style='background-image: url("./assets/imagens/trabalho.jpg");'>
               <div class="card-body">
                 <h5 class="card-title"><a href="">No trabalho</a></h5>
                 <p class="card-text">
@@ -184,7 +183,7 @@
           </div>
 
           <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
-            <div class="card" style='background-image: url("./assets/imagens/indigenas.png");'>
+            <div class="card" style='background-image: url("./assets/imagens/negocios.jpg");'>
               <div class="card-body">
                 <h5 class="card-title"><a href="">Nos negócios</a></h5>
                 <p class="card-text">
@@ -197,7 +196,7 @@
           </div>
 
           <div class="col-md-6 d-flex align-items-stretch mt-4">
-            <div class="card" style='background-image: url("./assets/imagens/indigena.png");'>
+            <div class="card" style='background-image: url("./assets/imagens/visibilidade.jpg");'>
               <div class="card-body">
                 <h5 class="card-title"><a href="">Visibilidade</a></h5>
                 <p class="card-text">
@@ -209,7 +208,7 @@
           </div>
 
           <div class="col-md-6 d-flex align-items-stretch mt-4">
-            <div class="card" style='background-image: url("./assets/imagens/indigena.png");'>
+            <div class="card" style='background-image: url("./assets/imagens/grupo-de-mulheres.jpg");'>
               <div class="card-body">
                 <h5 class="card-title"><a href="">Faça parte de grupos</a></h5>
                 <p class="card-text">
