--- a/dashboard.html
+++ b/dashboard.html
@@ -362,7 +362,7 @@
 
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-cart"></i>
+                      <i class="ri-bank-fill"></i>
                     </div>
                     <div class="ps-3">
                       <h6 id="saldoAtual">R$ 0,00</h6>
@@ -396,7 +396,7 @@
             </div><!-- End Revenue Card -->
             <!-- Revenue Card -->
             <div class="col-xxl-4 col-md-6">
-              <div class="card info-card revenue-card">
+              <div class="card info-card customers-card">
 
                 <div class="card-body">
                   <h5 class="card-title">Despesas <span>| Este mês</span></h5>
@@ -424,7 +424,7 @@
 
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-currency-dollar"></i>
+                      <i class="ri-restart-line"></i>
                     </div>
                     <div class="ps-3">
                       <h6 id="saldoInicial">R$ 0,00</h6>
@@ -445,7 +445,7 @@
 
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-currency-dollar"></i>
+                      <i class="ri-bar-chart-horizontal-fill"></i>
                     </div>
                     <div class="ps-3">
                       <h6 id="saldoPrevisto">R$ 0,00</h6>
@@ -1070,14 +1070,14 @@
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
     <div class="copyright">
-      &copy; Copyright <strong><span>RB</span></strong>. All Rights Reserved
+      &copy; Copyright <strong><span>Append</span></strong>. Todos os direitos reservados
     </div>
     <div class="credits">
       <!-- All the links in the footer should remain intact. -->
       <!-- You can delete the links only if you purchased the pro version. -->
       <!-- Licensing information: https://bootstrapmade.com/license/ -->
       <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
-      Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      Desenvolvido por EMP
     </div>
   </footer><!-- End Footer -->
 
