--- a/servicos.html
+++ b/servicos.html
@@ -473,7 +473,7 @@
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/mentor-free-education-bootstrap-theme/ -->
-          <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
+          <!-- Desenvolvido por EMP -->
           <p class="text-center mx-auto">Desenvolvido por <span class="amarelo">EMP</span></p>
         </div>
       </div>
